@@ -63,7 +63,7 @@ public class DistanceTraveledWithMILOnObdCommand extends ObdCommand
 
   @Override
   public float getImperialUnit() {
-    return new Double(km * 0.621371192).floatValue();
+    return Double.valueOf(km * 0.621371192).floatValue();
   }
 
   /**
